Add personalized boss availability information to TimeGUI
Introduced functionality to display player-specific boss availability times in the TimeGUI. This includes calculating and displaying when a player can attack a specific boss after their last interaction. Additionally, improved time formatting and adjusted spawn hour descriptions for clarity.